Fix invisible options in post create

--- a/frontend/src/components/Post/CreatePost.css
+++ b/frontend/src/components/Post/CreatePost.css
@@ -115,6 +115,10 @@
   height: 50px;
 }
 
+.create-post .post-details-bar option {
+  color: black;
+}
+
 .create-post .post-details-bar .post-details-bar-item {
   padding: 0 1rem 0 0;
 }
